--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -1050,8 +1050,8 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 			contentType: false,
 			dataType: "html",
 			success: function(data, textStatus, jqXHR){
-				alert(data)
-				window.location.reload()
+				alert(data);
+				window.location.reload();
 			}		
 		});
 	});
