Annotation bug correction in post detail page and adding annotation in community detail page.
Annotation bug correction in post detail page and adding annotation in community detail page.

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -21,21 +21,6 @@
   <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/sb-admin-2.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/tagsinput.js' %}"></script>
-
-
-
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
-
-    <script src="{% static 'js/jquery.Jcrop.min.js' %}"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="{% static 'annotation/annotation-model.js' %}"></script>
-    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-    <script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
-	<script src="{% static 'annotation/popup.js' %}"></script>
-
- 
   <style>
    
   </style>
@@ -1284,6 +1269,7 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
         <!-- Topbar -->
         <nav class="navbar navbar-expand navbar-light bg-primary topbar mb-4 static-top">
 		<a class="navbar-brand" href="/streampage/">
+
 			<img src="{% static 'uploads/logo/Logo.png' %}" width="55" height="55" class="d-inline-block align-top">
 			<img src="{% static 'uploads/logo/LogoText.png' %}" width="55" height="55" class="d-inline-block align-top">
 		</a>
@@ -1330,13 +1316,14 @@ $(document).on ("click", "#AddFreeSearch", function (event) {
 	  <div class="row content">
 		<div class="col-sm-2 sidenav d-flex">
 		</div>
-		<div class="col-sm-8 text-left"> 
-		  {% block content %}{% endblock %}
+		<div class="col-sm-8 text-left">
+	  		{% block content %}{% endblock %}
 		</div>
 		<div class="col-sm-2 sidenav d-flex">
 		</div>
 	  </div>
 	</div>
+	{% block annotation %}{% endblock %}
 	<footer class="container-fluid text-center">
 	  <p>Copyright Mystream 2020</p>
 	</footer>
