--- a/mystream/streampage/static/css/popup.css
+++ b/mystream/streampage/static/css/popup.css
@@ -15,12 +15,12 @@ div#users-contain table td, div#users-contain table th { border: 1px solid #eee;
 .annoContainer {
     width: 425px;
     background-color: #ffd969;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    overflow-x: auto;
+    position: absolute ;
+    top: 0px !important;
+    right: 0px !important;
+    overflow-x: auto !important;
     height: 200px;
-    z-index: 900;
+    z-index: 900 !important;
 }
 #slideButton {
     z-index: 999;
