bugs have  been fixed

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/tagsinput.css' %}">
 	<!--  <link rel="stylesheet" href="{% static 'css/annotator.min.css' %}">-->
-  <link rel="stylesheet" href="{% static 'css/popup.css' %}">
+	<!--link rel="stylesheet" href="{% static 'css/popup.css' %}"-->
   <link rel="stylesheet" href="{% static 'fontawesome-free/css/all.min.css' %}">
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!--link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"--->
+    <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="{% static 'css/jquery.Jcrop.css' %}">
+	<!--link rel="stylesheet" href="{% static 'css/jquery.Jcrop.css' %}"-->
 
 
   <script type="text/javascript" src="{% static 'jquery/jquery.min.js' %}"></script>
