--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -380,11 +380,11 @@
 </div>
 
 {% load static %}
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<!--script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
 
-<!--<script src="{% static 'js/jquery.Jcrop.min.js' %}"></script>
+<<script src="{% static 'js/jquery.Jcrop.min.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="{% static 'annotation/annotation-model.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
