Fix for annotation js
Fix for annotation js

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{% static 'fontawesome-free/css/all.min.css' %}">
 
     <!--link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"--->
-    <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">-->
 
 	<!--link rel="stylesheet" href="{% static 'css/jquery.Jcrop.css' %}"-->
 
