--- a/mystream/streampage/templates/postDetails.html
+++ b/mystream/streampage/templates/postDetails.html
@@ -103,6 +103,13 @@
 	    </div>
 		{% load static %}
 
+	<link rel="stylesheet" href="{% static 'css/annotator.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/popup.css' %}">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+	<link rel="stylesheet" href="{% static 'css/jquery.Jcrop.css' %}">
+
   	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
@@ -113,6 +120,7 @@
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
 	<script src="{% static 'annotation/popup.js' %}"></script>
+
 
 
 	<div class="annoContainer" id="annoContainer" style="display: none;">
