--- a/mystream/streampage/templates/community.html
+++ b/mystream/streampage/templates/community.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="d-flex flex-row align-items-center justify-content-between">
+<div class="d-flex flex-row align-items-center justify-content-between small">
 	  <button type="button" id="AddCommunity" class="btn btn-primary btn-sm small" data-toggle="modal" data-target="#CommunityModal">
 		<i class="fa fa-plus" aria-hidden="true"></i>
 		Add Community
