--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -243,7 +243,7 @@ $( document ).ready(function() {
 	});
 
 //DELETE COMMUNITY
-	$( "#deleteCommunity" ).click(function() {
+	$(document).on ("click", "#deleteCommunity", function (event) {
 		var Chash = $(this).attr('hash');
 		var data = new FormData();
 		data.append('community_Hash', Chash);
