Scrolling bug in annotation sidebar #182

--- a/mystream/streampage/templates/annotationBase.html
+++ b/mystream/streampage/templates/annotationBase.html
@@ -42,6 +42,8 @@
         <label id ="annotationCount">
             There is not any annotation, yet.
         </label>
+        <input type="hidden" id="numberOfAnno">
+
         <br>
     </div>
 
