--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -408,6 +408,8 @@
 			<label id ="annotationCount">
 				There is not any annotation, yet.
 			</label>
+            <input type="hidden" id="numberOfAnno">
+
 			<br>
 		</div>
 
