--- a/mystream/streampage/templates/postDetailsBrowse.html
+++ b/mystream/streampage/templates/postDetailsBrowse.html
@@ -6,8 +6,8 @@
 	<b>Creation Time: </b> {{ postEntries.postInstances.0.posttype.0.fieldCreationDate }}<br>
 	<b>      Creator: </b> {{ postEntries.postInstances.0.posttype.0.fieldCreator }}
 	</div><br><br>
-	<h5><b>INFORMATION</b></h5>
-		<table class="table small">
+	<h5><b>INFORMATION</b><h5>
+		<table class="table small"
 		  <tr>
 		    <td>
 			<div class = "small">
@@ -82,7 +82,7 @@
 					</table>
 				</td>
 			</tr>
-		 </table>
+		 <table>
 	    </div>
 		{% load static %}
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
