--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -108,7 +108,6 @@ $( document ).ready(function() {
 	$(document).on ("click", "#createCommunityButton", function (event) {
 		event.preventDefault();
 		var data = new FormData($('#createCommunity').get(0));
-		console.log(data);
 		console.log($("input[name=csrfmiddlewaretoken]").val());
 		$.ajax({
 			type:'POST',
@@ -120,11 +119,13 @@ $( document ).ready(function() {
 			success: CommunityCreateResult
 		});
 	});
-
+	
 	function CommunityCreateResult(data, textStatus, jqXHR){
 		alert(data);
 		window.location.reload();
 	}
+
+
 
 	$(document).on ("change", "#id_Community_Country", function () {
 		$.ajax({
@@ -242,7 +243,7 @@ $( document ).ready(function() {
 	});
 
 //DELETE COMMUNITY
-	$(document).on ("click", "#deleteCommunity", function (event) {
+	$( "#deleteCommunity" ).click(function() {
 		var Chash = $(this).attr('hash');
 		var data = new FormData();
 		data.append('community_Hash', Chash);
