Scrolling bug in annotation sidebar #182

--- a/mystream/streampage/templates/postDetails.html
+++ b/mystream/streampage/templates/postDetails.html
@@ -129,6 +129,7 @@
 			<label id ="annotationCount">
 				There is not any annotation, yet.
 			</label>
+            <input type="hidden" id="numberOfAnno">
 			<br>
 		</div>
 
