--- a/mystream/streampage/templates/popup.html
+++ b/mystream/streampage/templates/popup.html
@@ -87,6 +87,7 @@
         <label id ="annotationCount">
             There is not any annotation, yet.
         </label>
+        <input type="hidden" id="numberOfAnno">
         <br>
     </div>
 
